Update bank portal with institutional-grade template

--- a/bank/index.html
+++ b/bank/index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bank Partner Portal</title>
+<title>Kamakazi Capital — Bank CRA Portal</title>
+<style>
+body { font-family: Arial, sans-serif; background:#0b0b0f; color:#eee; margin:0; }
+.container { max-width:900px; margin:auto; padding:60px 20px; }
+h1 { color:#d4af37; }
+.card { background:#16161c; padding:30px; border-radius:12px; margin-top:30px; }
+a.button { display:inline-block; margin-top:20px; padding:14px 24px; background:#d4af37; color:#000; text-decoration:none; border-radius:8px; font-weight:bold; }
+.small { color:#aaa; font-size:13px; margin-top:40px; }
+</style>
 </head>
 <body>
-    <h1>Bank Partner Portal</h1>
-    <p>CRA Package and Renewal Documents</p>
+<div class="container">
+<h1>Bank CRA & Community Investment Portal</h1>
+
+<p>
+This portal provides banks with direct access to Kamakazi Capital & SB Trust's
+CRA-eligible programs, real-time outcome reporting, and renewal-ready dashboards.
+</p>
+
+<div class="card">
+<h3>What You Can Access</h3>
+<ul>
+<li>Live outcome scores by program</li>
+<li>Cost-per-participant efficiency</li>
+<li>Risk flags and remediation plans</li>
+<li>CRA renewal and compliance views</li>
+</ul>
+
+<p>
+Download or view the current CRA performance and renewal materials below:
+</p>
+
+<a class="button" href="CRA_Package_v1.pdf">Download CRA Package</a><br>
+<a class="button" href="Renewal_Deck_v1.pdf">View Renewal Dashboard</a>
+</div>
+
+<p class="small">
+Kamakazi Capital / SB Trust • Institutional Reporting Portal • Version 2026-Q1
+</p>
+</div>
 </body>
 </html>
