Update foundation portal with institutional-grade template

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Foundation Partner Portal</title>
+<title>Kamakazi Capital — Foundation & CSR Portal</title>
+<style>
+body { font-family: Arial, sans-serif; background:#0b0b0f; color:#eee; margin:0; }
+.container { max-width:900px; margin:auto; padding:60px 20px; }
+h1 { color:#d4af37; }
+.card { background:#16161c; padding:30px; border-radius:12px; margin-top:30px; }
+a.button { display:inline-block; margin-top:20px; padding:14px 24px; background:#d4af37; color:#000; text-decoration:none; border-radius:8px; font-weight:bold; }
+.small { color:#aaa; font-size:13px; margin-top:40px; }
+</style>
 </head>
 <body>
-    <h1>Foundation Partner Portal</h1>
-    <p>Sponsor Packages and Use of Funds</p>
+<div class="container">
+<h1>Foundation & Corporate Giving Portal</h1>
+
+<p>
+This portal provides foundations and CSR partners with outcome-driven funding
+structures, impact reporting, and use-of-funds transparency.
+</p>
+
+<div class="card">
+<h3>What You Can Access</h3>
+<ul>
+<li>Tiered funding structures</li>
+<li>Program outcome scoring</li>
+<li>Cost-per-participant efficiency</li>
+<li>Quarterly reporting readiness</li>
+</ul>
+
+<a class="button" href="Foundation_Pack_v1.pdf">View Foundation Pack</a><br>
+<a class="button" href="Use_of_Funds_v1.pdf">View Use-of-Funds</a>
+</div>
+
+<p class="small">
+Kamakazi Capital / SB Trust • Institutional Giving Portal • Version 2026-Q1
+</p>
+</div>
 </body>
 </html>
