Update government portal with institutional-grade template

--- a/government/index.html
+++ b/government/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Government / DFI Partner Portal</title>
+<title>Kamakazi Capital — Government & DFI Portal</title>
+<style>
+body { font-family: Arial, sans-serif; background:#0b0b0f; color:#eee; margin:0; }
+.container { max-width:900px; margin:auto; padding:60px 20px; }
+h1 { color:#d4af37; }
+.card { background:#16161c; padding:30px; border-radius:12px; margin-top:30px; }
+a.button { display:inline-block; margin-top:20px; padding:14px 24px; background:#d4af37; color:#000; text-decoration:none; border-radius:8px; font-weight:bold; }
+.small { color:#aaa; font-size:13px; margin-top:40px; }
+</style>
 </head>
 <body>
-    <h1>Government / DFI Partner Portal</h1>
-    <p>PRM, Embassy, and City Partnership Decks</p>
+<div class="container">
+<h1>Government, Embassy & DFI Portal</h1>
+
+<p>
+This portal provides government agencies, DFIs, and embassies with implementation-ready
+program documentation, reporting frameworks, and compliance visibility.
+</p>
+
+<div class="card">
+<h3>Available Materials</h3>
+<ul>
+<li>PRM and humanitarian program briefs</li>
+<li>City and county service delivery plans</li>
+<li>Outcome and risk monitoring frameworks</li>
+<li>Implementation readiness packs</li>
+</ul>
+
+<a class="button" href="PRM_Brief_v1.pdf">PRM / Refugee Programs</a><br>
+<a class="button" href="City_County_Pack_v1.pdf">City & County Programs</a>
+</div>
+
+<p class="small">
+Kamakazi Capital / SB Trust • Government & DFI Portal • Version 2026-Q1
+</p>
+</div>
 </body>
 </html>
