Update transparency portal with institutional-grade template

--- a/transparency/index.html
+++ b/transparency/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Public Transparency Portal</title>
+<title>Diaspora Impact & Transparency Portal</title>
+<style>
+body { font-family: Arial, sans-serif; background:#0b0b0f; color:#eee; margin:0; }
+.container { max-width:900px; margin:auto; padding:60px 20px; }
+h1 { color:#d4af37; }
+.card { background:#16161c; padding:30px; border-radius:12px; margin-top:30px; }
+a.button { display:inline-block; margin-top:20px; padding:14px 24px; background:#d4af37; color:#000; text-decoration:none; border-radius:8px; font-weight:bold; }
+.small { color:#aaa; font-size:13px; margin-top:40px; }
+</style>
 </head>
 <body>
-    <h1>Public Transparency Portal</h1>
-    <p>Public Impact Reports and Disclosures</p>
+<div class="container">
+<h1>Diaspora Impact & Transparency Portal</h1>
+
+<p>
+This public portal displays program outcomes, service delivery, and performance
+health for Kamakazi Capital & SB Trust initiatives.
+</p>
+
+<div class="card">
+<h3>What This Shows</h3>
+<ul>
+<li>Youth and families served</li>
+<li>Sessions delivered</li>
+<li>Outcome score health</li>
+<li>Program performance status</li>
+</ul>
+
+<a class="button" href="https://YOUR_AIRTABLE_TRANSPARENCY_LINK">View Live Impact Dashboard</a>
+</div>
+
+<p class="small">
+Live data is generated directly from Kamakazi Capital & SB Trust operational systems.
+</p>
+</div>
 </body>
 </html>
